Update styling and add styling
Update:
-main background color, max width, margin, and bottom padding
-h1 font size and bottom margin

Add:
-.time text font size
-.time children text size, position, and color

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,18 @@
+body {
+    background-color: black;
+}
+
+main {
+    background-color: antiquewhite;
+    max-width: 80%;
+    margin: auto;
+    padding-bottom: 1rem;
+}
+
 h1 {
-    font-size: 64px;
+    font-size: 6rem;
     text-align: center;
+    margin-bottom: 1rem;
 }
 
 .stopwatch-wrapper {
@@ -12,4 +24,20 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 1rem;
+}
+
+.time {
+    font-size: 5.3rem;
+}
+
+.time > span {
+    font-size: 2.5rem;
+    position: relative;
+    right: 1rem;
+    color: white;
+    text-shadow:
+        -1px -1px 0 black,
+        1px -1px 0 black,
+        -1px 1px 0 black,
+        1px 1px 0 black;
 }
