Add disabled class styling and change background color for reset button

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,14 @@ button {
 }
 
 .reset {
-    background-color: #C7C7CC;
-    color: black;
-    box-shadow: 0 0 0 3px #C7C7CC;
+    background-color: black;
+    color: white;
+    box-shadow: 0 0 0 3px black;
+}
+
+.disabled {
+    cursor: not-allowed;
+    background-color: #E0E0E0;
+    color: #B0B0B0;
+    box-shadow: 0 0 3px #E0E0E0;
 }
