--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ h1 {
     font-size: 2.5rem;
     position: relative;
     top: 10px;
+    right: 10px;
     text-shadow:
         -1px -1px 0 black,
         1px -1px 0 black,
