--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ button {
     box-shadow: 0 0 0 3px black;
 }
 
-.disabled {
+button[disabled] {
     cursor: not-allowed;
     background-color: #E0E0E0;
     color: #B0B0B0;
